--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -22,6 +22,7 @@ a {
 .contact-info a,
 .site-navigation a {
   color: #506a85;
+  text-transform: uppercase;
   padding: 0;
 }
 .contact-links {
@@ -71,23 +72,18 @@ a {
   align-items: center;
   min-height: 112px;
   display: flex; 
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 .site-navigation {
   margin: 0;
-  padding: 0;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
-  font-size: 15px;
-  line-height: auto;
-  text-transform: uppercase;
-  font-weight: 700;
-  display: flex;
-  color: #506a85;
-  align-items: center;
+  display: flex; 
   flex-wrap: wrap;
+  width: 803px;
 }
-.site-navigation li {
-  margin-right: 45px;
+.site-navigation a {
+  display: block;
+  padding: 48px 22px;
 }
 .search {
   margin-right: 23px;
