--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,88 +9,85 @@
     <title>Reen</title>
   </head>
   <body>
-      <header class="main-header">
-          <div class="contact-links">
-              <div class="container"> 
-                  <ul class="contact-info">
-                    <li>
-                      <a href="#" class="contact-mail">
-                          <img src="img/icon-mail-1.png" width="11" height="9" alt="info@reen.com">
-                      </a>                      
-                    </li>
-                    <li>
-                      <p>info@reen.com</p>
-                    </li>
-                    <li>
-                      <a href="#" class="mobile">
-                          <img src="img/icon-mobile.png" width="7" height="13" alt=" +00(123)4567890">
-                      </a>
-                    </li>
-                    <li>
-                      <p>+00(123)4567890</p>
-                    </li>
-                  </ul>
-                  <ul class="social-icons">
-                    <li>
-                      <a class="social-btn-facebook" href="#">
-                        <img src="img/icon-s-facebook.png" width="6" height="11" alt="Facebook">
-                      </a>
-                    </li>
-                    <li>
-                      <a class="social-btn-gplus" href="#">
-                        <img src="img/icon-s-gplus.png" width="11" height="11" alt=" Gplus">
-                      </a>
-                    </li>
-                    <li>
-                      <a class="social-btn-twitter"  href="#">
-                        <img src="img/icon-s-twitter.png" width="11" height="9" alt="Twitter">
-                      </a>
-                    </li>
-                    <li>
-                      <a class="social-btn-pinterest" href="#">
-                        <img src="img/icon-s-pinterest.png" width="9" height="11" alt=" Pinterest">
-                      </a>
-                    </li>
-                    <li>
-                      <a class="social-btn-behance" href="#">
-                        <img src="img/icon-s-behance.png" width="13" height="9" alt=" Behance">
-                      </a>
-                    </li>
-                    <li>
-                      <a class="social-btn-dribbble" href="#">
-                        <img src="img/icon-s-dribbble.png" width="12" height="11" alt="Dribbble">
-                      </a>
-                    </li>
-                  </ul>
-              </div>
-          </div>
-          <div class="main-header-wrapper">
-            <div class="container">
-              <nav class="main-navigation">
-                <a class="main-header-logo">
-                  <img src="img/logo.svg" width="161" height="40" alt="Logo REEN">
-                </a>
-                <ul class="site-navigation">
-                  <li><a href="home.html">Home</a></li>
-                  <li><a href="portfolio.html">Portfolio</a></li>
-                  <li><a href="blog.html">Blog</a></li>
-                  <li><a href="pages.html">Pages</a></li>
-                  <li><a href="features.html">Features</a></li>
-                  <li><a href="megamenu.html">Mega Menu</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <ul class="search">
-                  <li>
-                    <a class="search-icon" href="search.html">
-                      <img src="img/icon-search.png" width="12" height="12" alt="Search">
-                    </a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-      </header>
-      <main>
+    <header class="header">
+      <div class="contact-links">
+        <div class="container">
+          <div class="wrapper-flex">
+           <ul class="contact-info">
+             <li>
+               <a href="#">
+                <img src="img/icon-mail-1.png" width="11" height="9" alt="info@reen.com">
+                <span>info@reen.com</span>
+               </a>                      
+             </li>
+             <li>
+               <a href="#">
+                <img src="img/icon-mobile.png" width="7" height="13" alt=" +00(123)4567890">
+                <span>+00(123)4567890</span>
+               </a>
+             </li>
+           </ul>
+           <ul class="social-icons">
+             <li>
+               <a href="#">
+                <img src="img/icon-s-facebook.png" width="6" height="11" alt="Facebook">
+               </a>
+             </li>
+             <li>
+               <a href="#">
+                <img src="img/icon-s-gplus.png" width="11" height="11" alt=" Gplus">
+               </a>
+             </li>
+             <li>
+               <a href="#">
+               <img src="img/icon-s-twitter.png" width="11" height="9" alt="Twitter">
+               </a>
+             </li>
+             <li>
+               <a href="#">
+               <img src="img/icon-s-pinterest.png" width="9" height="11" alt=" Pinterest">
+               </a>
+             </li>
+             <li>
+               <a href="#">
+               <img src="img/icon-s-behance.png" width="13" height="9" alt=" Behance">
+               </a>
+             </li>
+             <li>
+               <a href="#">
+               <img src="img/icon-s-dribbble.png" width="12" height="11" alt="Dribbble">
+               </a>
+             </li>
+           </ul>
+          </div>  
+        </div>
+      </div>
+      <div class="container">
+        <div class="main-navigation">
+          <a class="header-logo">
+            <img src="img/logo.svg" width="161" height="40" alt="Logo REEN">
+          </a>
+          <ul class="site-navigation">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="pages.html">Pages</a></li>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="megamenu.html">Mega Menu</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+          <ul class="search">
+            <li>
+              <a class="search-icon" href="search.html">
+                <img src="img/icon-search.png" width="12" height="12" alt="Search">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
        <div class="slide" >
          <input type="radio" name="slider" id="slider_1" checked="checked">
          <label for="slider_1"></label>
@@ -148,7 +145,8 @@
               <a class="button-slide-5" href="#">Get Started Now</a>    
             </div>
        </div>
-       <section class="whoweare">
+      </div>
+      <section class="whoweare">
          <h1>Beautiful. Clean. Responsive.</h1>
          <p>REEN is a high-quality solution for those
             who want a beautiful website in no time. 
