--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,85 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta http-equiv='X-UA-Compatible' content='ie=edge'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap' rel='stylesheet'>
+    <link rel='stylesheet' href='css/style.css'>
     <title>Reen</title>
   </head>
   <body>
-    <header class="header">
-      <div class="contact-links">
-        <div class="container">
-          <div class="wrapper-flex">
-           <ul class="contact-info">
+    <header class='header'>
+      <div class='contact-links'>
+        <div class='container'>
+          <div class='wrapper-flex'>
+           <ul class='contact-info'>
              <li>
-               <a href="#">
-                <img src="img/icon-mail-1.png" width="11" height="9" alt="info@reen.com">
+               <a href='#'>
+                <img src='img/icon-mail-1.png' width='11' height='9' alt='info@reen.com'>
                 <span>info@reen.com</span>
                </a>                      
              </li>
              <li>
-               <a href="#">
-                <img src="img/icon-mobile.png" width="7" height="13" alt=" +00(123)4567890">
+               <a href='#'>
+                <img src='img/icon-mobile.png' width='7' height='13' alt=' +00(123)4567890'>
                 <span>+00(123)4567890</span>
                </a>
              </li>
            </ul>
-           <ul class="social-icons">
+           <ul class='social-icons'>
              <li>
-               <a href="#">
-                <img src="img/icon-s-facebook.png" width="6" height="11" alt="Facebook">
+               <a href='#'>
+                <img src='img/icon-s-facebook.png' width='6' height='11' alt='Facebook'>
                </a>
              </li>
              <li>
-               <a href="#">
-                <img src="img/icon-s-gplus.png" width="11" height="11" alt=" Gplus">
+               <a href='#'>
+                <img src='img/icon-s-gplus.png' width='11' height='11' alt=' Gplus'>
                </a>
              </li>
              <li>
-               <a href="#">
-               <img src="img/icon-s-twitter.png" width="11" height="9" alt="Twitter">
+               <a href='#'>
+               <img src='img/icon-s-twitter.png' width='11' height='9' alt='Twitter'>
                </a>
              </li>
              <li>
-               <a href="#">
-               <img src="img/icon-s-pinterest.png" width="9" height="11" alt=" Pinterest">
+               <a href='#'>
+               <img src='img/icon-s-pinterest.png' width='9' height='11' alt=' Pinterest'>
                </a>
              </li>
              <li>
-               <a href="#">
-               <img src="img/icon-s-behance.png" width="13" height="9" alt=" Behance">
+               <a href='#'>
+               <img src='img/icon-s-behance.png' width='13' height='9' alt=' Behance'>
                </a>
              </li>
              <li>
-               <a href="#">
-               <img src="img/icon-s-dribbble.png" width="12" height="11" alt="Dribbble">
+               <a href='#'>
+               <img src='img/icon-s-dribbble.png' width='12' height='11' alt='Dribbble'>
                </a>
              </li>
            </ul>
           </div>  
         </div>
       </div>
-      <div class="container">
-        <div class="main-navigation">
-          <a class="header-logo">
-            <img src="img/logo.svg" width="161" height="40" alt="Logo REEN">
+      <div class='container'>
+        <div class='main-navigation'>
+          <a class='header-logo'>
+            <img src='img/logo.svg' width='161' height='40' alt='Logo REEN'>
           </a>
-          <ul class="site-navigation">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="pages.html">Pages</a></li>
-            <li><a href="features.html">Features</a></li>
-            <li><a href="megamenu.html">Mega Menu</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <ul class='site-navigation'>
+            <li><a href='home.html'>Home</a></li>
+            <li><a href='portfolio.html'>Portfolio</a></li>
+            <li><a href='blog.html'>Blog</a></li>
+            <li><a href='pages.html'>Pages</a></li>
+            <li><a href='features.html'>Features</a></li>
+            <li><a href='megamenu.html'>Mega Menu</a></li>
+            <li><a href='contact.html'>Contact</a></li>
           </ul>
-          <ul class="search">
+          <ul class='search'>
             <li>
-              <a class="search-icon" href="search.html">
-                <img src="img/icon-search.png" width="12" height="12" alt="Search">
+              <a class='search-icon' href='search.html'>
+                <img src='img/icon-search.png' width='12' height='12' alt='Search'>
               </a>
             </li>
           </ul>
@@ -87,103 +87,239 @@
       </div>
     </header>
     <main>
-      <div class="container">
-       <div class="slide" >
-         <input type="radio" name="slider" id="slider_1" checked="checked">
-         <label for="slider_1"></label>
-            <div class="slider slider_text1">
+      <div class='container'>
+       <div class='slide' >
+         <input type='radio' name='slider' id='slider_1' checked='checked'>
+         <label for='slider_1'></label>
+            <div class='slider slider_text1'>
               <h1>Made for Designers</h1>
               <p>Create your online portfolio in minutes with
                  the professionally and lovingly designed REEN</br>
                  website template. Customize your site with versatile
                  and easy to use features.</p>
-              <img src="img/image-1.jpg">
-              <a class="button-slide-1" href="#">Get Started Now</a>    
+              <img src='img/image-1.jpg'>
+              <a class='button-slide-1' href='#'>Get Started Now</a>    
             </div>
-              <input type="radio" name="slider" id="slider_2">
-              <label for="slider_2"></label>
-            <div class="slider slider_text2">
+              <input type='radio' name='slider' id='slider_2'>
+              <label for='slider_2'></label>
+            <div class='slider slider_text2'>
               <h1>Fresh and</br> beautiful design</h1>
               <p>REEN is designed to showcase your talent and
                  put your work in the forefront.</br>
                  Professionally use of typography and layout 
                  that fits your content.</p>
-              <img src="img/image-2.jpg">
-              <a class="button-slide-2" href="#">Get Started Now</a>    
+              <img src='img/image-2.jpg'>
+              <a class='button-slide-2' href='#'>Get Started Now</a>    
             </div>
                             
-              <input type="radio" name="slider" id="slider_3">
-              <label for="slider_3"></label>
-            <div class="slider slider_text3">
+              <input type='radio' name='slider' id='slider_3'>
+              <label for='slider_3'></label>
+            <div class='slider slider_text3'>
               <h1>Clean and</h1>
               <h1>reusable code</h1>
               <p>The clean code allows you to easily copy code
                  blocks from content</br>
                  modules and past them in different places or layouts.</p>
-              <img src="img/image-3.jpg">
-              <a class="button-slide-3" href="#">Get Started Now</a>    
+              <img src='img/image-3.jpg'>
+              <a class='button-slide-3' href='#'>Get Started Now</a>    
             </div>
-              <input type="radio" name="slider" id="slider_4">
-              <label for="slider_4"></label>
-            <div class="slider slider_text4">
+              <input type='radio' name='slider' id='slider_4'>
+              <label for='slider_4'></label>
+            <div class='slider slider_text4'>
               <h1>Just focus on</h1>
               <h1>your creativity</h1>
               <p>Take a break from messing around with heavy
                  coding and spend your</br>
                  time brainstorming ideas for your next project.</p>
-              <img src="img/image-4.jpg">
-              <a class="button-slide-4" href="#">Get Started Now</a>    
+              <img src='img/image-4.jpg'>
+              <a class='button-slide-4' href='#'>Get Started Now</a>    
             </div>
-              <input type="radio" name="slider" id="slider_5">
-              <label for="slider_5"></label>
-            <div class="slider slider_text5">
+              <input type='radio' name='slider' id='slider_5'>
+              <label for='slider_5'></label>
+            <div class='slider slider_text5'>
               <h1>Showcase</br> your content</h1>
               <p>With REEN you have the possibility to create 
                 websites for various contents</br>
                 quickly and easily. Now it's up to you!</p>
-              <img src="img/image-5.jpg">
-              <a class="button-slide-5" href="#">Get Started Now</a>    
+              <img src='img/image-5.jpg'>
+              <a class='button-slide-5' href='#'>Get Started Now</a>    
             </div>
        </div>
       </div>
-      <section class="whoweare">
-         <h1>Beautiful. Clean. Responsive.</h1>
-         <p>REEN is a high-quality solution for those
-            who want a beautiful website in no time. 
-            It's fully responsive and will adapt itself to any mobile device.
-             iPad, iPhone, Android,
-            it doesn't matter. Your content will always looks its absolute best.</p>
-         <div class="advantages">
-           <div class="advantages_text1">
-             <h1>Passion</h1>
-             <p>Magnis modipsae que lib voloratati
+      <section>
+        <div class='container'>
+          <ul class='features-list'>
+            <li class='features-item'>
+              <h1>Beautiful. Clean. Responsive.</h1>
+              <p>REEN is a high-quality solution for those
+                 who want a beautiful website in no time. 
+                 It's fully responsive and will adapt itself to any mobile device.
+                  iPad, iPhone, Android,
+                 it doesn't matter. Your content will always looks its absolute best.</p>
+           </li>      
+           <li class='features-item'>
+              <h1>Passion</h1>
+              <p>Magnis modipsae que lib voloratati
+                 andigen daepeditem quiate re porem
+                 aut labor. Laceaque quiae sitiorem rest
+                 non restibusaes maio es dem tumquam
+                 core posae volor remped modis volor.</p>
+           </li>
+           <li class='features-item'>
+              <h1>Creativity</h1>
+              <p>Magnis modipsae que lib voloratati
                 andigen daepeditem quiate re porem
                 aut labor. Laceaque quiae sitiorem rest
                 non restibusaes maio es dem tumquam
                 core posae volor remped modis volor.</p>
-             <img src="img/icon-heart-empty-1.png">   
-           </div>
-           <div class="advantages_text2">
-             <h1>Creativity</h1>
-             <p>Magnis modipsae que lib voloratati
-               andigen daepeditem quiate re porem
-               aut labor. Laceaque quiae sitiorem rest
-               non restibusaes maio es dem tumquam
-               core posae volor remped modis volor.</p>
-             <img src="img/icon-lamp.png">  
-           </div>
-           <div class="advantages_text3">
-             <h1>Quality</h1>
-             <p>Magnis modipsae que lib voloratati
-                andigen daepeditem quiate re porem
-                aut labor. Laceaque quiae sitiorem rest
-                non restibusaes maio es dem tumquam
-                core posae volor remped modis volor.</p>
-             <img src="img/icon-star-empty-1.png">   
-           </div>
-       
+           </li>
+           <li class='features-item'>
+              <h1>Quality</h1>
+              <p>Magnis modipsae que lib voloratati
+                 andigen daepeditem quiate re porem
+                 aut labor. Laceaque quiae sitiorem rest
+                 non restibusaes maio es dem tumquam
+                 core posae volor remped modis volor.</p>
+           </li>
+         </ul>   
+        </div>                   
        </section>
-      
+       <section>
+         <div class='portfolio'>
+           <div class='container'>
+             <div class='portfolio-item'>
+               <h1>Check out our latest works</h1>
+               <p>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
+             </div>
+             <div class='portfolio-item-big'>
+              <figure>
+               <img src='img/image_granthotel.jpg' width='570px' height='390px'
+               alt='Grand Motel gets an identity brushup'>
+               <figcaption>
+                <h1>Grand Motel gets an identity brushup</h1>
+                <p>Identity</p>
+               </figcaption>
+              </figure>
+              <figure>
+               <img src='img/image_figure2.jpg'
+               alt='Fresh branding for a creative startup'>
+               <figcaption>
+                <h1>Fresh branding for a creative startup</h1>
+                <p>Identity</p>
+               </figcaption>
+              </figure>
+             </div>
+             <div>
+               <ul class='porfolio-item-small'>
+                 <li><img src='img/image-item-1.jpg' width='270px' height='187px'></li>
+                 <li><img src='img/image-item-2.jpg' width='270px' height='187px'></li>
+                 <li><img src='img/image-item-3.jpg' width='270px' height='187px'></li>
+                 <li><img src='img/image-item-4.jpg' width='270px' height='187px'></li> 
+               </ul>  
+             </div>  
+           </div> 
+         </div>
+       </section>
+       <section class='cooperation'>
+         <div class='container'>
+           <div class='cooperation-block'>
+              <h1>Want to work with us?</h1>
+              <p>Magnis modipsae que voloratati andigen
+                 daepeditem quiate re porem aut labor. 
+                 Laceaque quiae sitiorem rest non restibusaes
+                  maio es dem tumquam.</p>
+            <a class='button-link' href='#'>Get in touch</a>
+           </div>        
+         </div>
+       </section>
       </main>
+      <footer class='footer'>
+        <div class='container'>
+          <div class='footer-info'>
+            <div class='footer-item'>
+              <h1>Who we are</h1>
+              <a href="#">
+              <img src='img/footer_logo (1).svg'
+               width="130px" height="32px" alt='footer_logo'>
+              </a>
+               <p>Magnis modipsae voloratati andigen
+                 daepeditem quiate re porem que aut
+                 labor. Laceaque eictemperum quiae
+                 sitiorem rest non restibusaes 
+                 maio es dem tumquam.</p>
+              <a href="#">
+                <span>More about us</span>
+              </a>   
+            </div>
+            <div class='footer-item'>
+              <h1>Latest works</h1>
+              <ul class='footer-img'>
+                <li><img src='img/footer-image-1.jpg' width="126px" height="86px"></li>
+                <li><img src='img/footer-image-2.jpg' width="126px" height="86px"></li>
+                <li><img src='img/footer-image-3.jpg' width="126px" height="86px"></li>
+                <li><img src='img/footer-image-4.jpg' width="126px" height="86px"></li>
+              </ul>
+            </div>
+            <div class='footer-item'>
+              <h1>Get in touch</h1>
+              <p>Doloreiur quia commolu ptatemp dolupta
+                 oreprerum tibusam eumenis et consent 
+                 accullignis dentibea autem inisita.</p>
+            <ul>
+              <li>
+                  <a href="#">
+                      <img src='img/icon-location.svg' width="7px" height="12px">
+                      <span>84 Street, City, State 24813</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <img src='img/icon-mobile.svg' width="7px" height="14px">
+                      <span>+00 (123) 456 78 90</span>
+                  </a>
+              </li>
+              <li>
+                  <a href="#">
+                      <img src='img/icon-mail.svg' width="11px" height="10px">
+                      <span>info@reen.com</span>
+                  </a>
+              </li>
+            </ul>   
+            </div>
+            <div class='footer-item'>
+              <h1>Free updates</h1>
+              <p>Conecus iure posae volor remped
+                 modis laut lor volor accabora incim
+                 resto explabo.</p>
+            <form action="#" class="subscribe" method="POST">
+              <input type="text" name="email" value="Enter your email address" />    
+              <input type="submit" value="Subscribe">
+            </form> 
+            </div>
+          </div>
+        </div>
+        <div class="footer-wrap">
+          <div class="container">
+            <div class="footer-ending">
+              <p>© 2014 REEN. All rights reserved.</p>
+              <ul class='footer-navigation'>
+                <li><a href='#'>Home</a></li>
+                <li>·</li>
+                <li><a href='#'>Portfolio</a></li>
+                <li>·</li>
+                <li><a href='#'>Blog</a></li>
+                <li>·</li>
+                <li><a href='#'>About</a></li>
+                <li>·</li>
+                <li><a href='#'>Services</a></li>
+                <li>·</li>
+                <li><a href='#'>Contact</a></li>
+              </ul>
+              
+            </div>
+          </div>
+        </div>
+      </footer>
     </body>
 </html>    
+
