--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -292,8 +292,8 @@
                  modis laut lor volor accabora incim
                  resto explabo.</p>
             <form action="#" class="subscribe" method="POST">
-              <input type="text" name="email" value="Enter your email address" />    
-              <input type="submit" value="Subscribe">
+              <input type="email" placeholder="Enter your email address" required autofocus>    
+              <input type="submit" value="subscribe">
             </form> 
             </div>
           </div>
