--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -467,7 +467,7 @@ a.button-link {
   background-color: #4e5c6c;
   border-radius: 3px;
  }
- input[type="text"] {
+ input[type="email"] {
   min-width: 150px;
   border: none; 
   outline: none;
