--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -87,19 +87,27 @@
       </div>
     </header>
     <main>
-      <div class='container'>
-       <div class='slide' >
-         <input type='radio' name='slider' id='slider_1' checked='checked'>
-         <label for='slider_1'></label>
-            <div class='slider slider_text1'>
-              <h1>Made for Designers</h1>
-              <p>Create your online portfolio in minutes with
-                 the professionally and lovingly designed REEN</br>
-                 website template. Customize your site with versatile
-                 and easy to use features.</p>
-              <img src='img/image-1.jpg'>
-              <a class='button-slide-1' href='#'>Get Started Now</a>    
-            </div>
+      <div class='slider'>
+        <ul>
+          <li>
+            <img src='img/image-1.jpg'>
+             <div class="slider-content">
+                <div class='container'>
+                    <div class="content">
+                     <h1>Made for Designers</h1>
+                     <p>Create your online portfolio in minutes with
+                        the professionally and lovingly designed REEN</br>
+                         website template. Customize your site with versatile
+                         and easy to use features.</p>
+                     <a class='button-slide-1' href='#'>Get Started Now</a>
+                     </div>
+                 </div>
+             </div>
+             
+          </li>
+        </ul>
+      </div>
+            <!--- 
               <input type='radio' name='slider' id='slider_2'>
               <label for='slider_2'></label>
             <div class='slider slider_text2'>
@@ -111,7 +119,6 @@
               <img src='img/image-2.jpg'>
               <a class='button-slide-2' href='#'>Get Started Now</a>    
             </div>
-                            
               <input type='radio' name='slider' id='slider_3'>
               <label for='slider_3'></label>
             <div class='slider slider_text3'>
@@ -143,7 +150,7 @@
                 quickly and easily. Now it's up to you!</p>
               <img src='img/image-5.jpg'>
               <a class='button-slide-5' href='#'>Get Started Now</a>    
-            </div>
+            </div>-->   
        </div>
       </div>
       <section>
@@ -267,19 +274,19 @@
                  accullignis dentibea autem inisita.</p>
             <ul>
               <li>
-                  <a href="#">
+                  <a class="icon" href="#">
                       <img src='img/icon-location.svg' width="7px" height="12px">
                       <span>84 Street, City, State 24813</span>
                   </a>
               </li>
               <li>
-                  <a href="#">
+                  <a class="icon" href="#">
                       <img src='img/icon-mobile.svg' width="7px" height="14px">
                       <span>+00 (123) 456 78 90</span>
                   </a>
               </li>
               <li>
-                  <a href="#">
+                  <a class="icon" href="#">
                       <img src='img/icon-mail.svg' width="11px" height="10px">
                       <span>info@reen.com</span>
                   </a>
@@ -292,7 +299,7 @@
                  modis laut lor volor accabora incim
                  resto explabo.</p>
             <form action="#" class="subscribe" method="POST">
-              <input type="email" placeholder="Enter your email address" required autofocus>    
+              <input type="email" placeholder="Enter your email address" required>    
               <input type="submit" value="subscribe">
             </form> 
             </div>
