исправлен slider & pagination

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -289,7 +289,7 @@ a.button-link {
   font-weight: 500;
 }
 .subscribe {
-  width: 280px; 
+  width: 270px; 
   min-height: 40px;
   background-color: #4e5c6c;
   border-radius: 3px;
@@ -313,7 +313,7 @@ a.button-link {
  input[type="submit"] {
   width: 88px; 
   height: 30px; 
-  margin-left: 10px;
+  margin-left: 0;
   text-transform: uppercase;
   text-decoration: none;
   font-family: 'Source Sans Pro', Arial, sans-serif;
