--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -91,68 +91,26 @@
         <ul>
           <li>
             <img src='img/image-1.jpg'>
-             <div class="slider-content">
-                <div class='container'>
-                    <div class="content">
-                     <h1>Made for Designers</h1>
-                     <p>Create your online portfolio in minutes with
-                        the professionally and lovingly designed REEN</br>
-                         website template. Customize your site with versatile
-                         and easy to use features.</p>
-                     <a class='button-slide-1' href='#'>Get Started Now</a>
-                     </div>
-                 </div>
-             </div>
-             
+            <div class="slider-content">
+              <h1>Made for Designers</h1>
+              <p>Create your online portfolio in minutes with
+                  the professionally and lovingly designed REEN</br>
+                  website template. Customize your site with versatile
+                  and easy to use features.</p>
+              <a class='button-slide-1' href='#'>Get Started Now</a>
+            </div>
           </li>
         </ul>
+        <div class="pagination">
+        <ul>
+         <li></li>
+         <li></li>
+         <li></li>
+         <li></li>
+         <li></li>
+        </ul>
       </div>
-            <!--- 
-              <input type='radio' name='slider' id='slider_2'>
-              <label for='slider_2'></label>
-            <div class='slider slider_text2'>
-              <h1>Fresh and</br> beautiful design</h1>
-              <p>REEN is designed to showcase your talent and
-                 put your work in the forefront.</br>
-                 Professionally use of typography and layout 
-                 that fits your content.</p>
-              <img src='img/image-2.jpg'>
-              <a class='button-slide-2' href='#'>Get Started Now</a>    
-            </div>
-              <input type='radio' name='slider' id='slider_3'>
-              <label for='slider_3'></label>
-            <div class='slider slider_text3'>
-              <h1>Clean and</h1>
-              <h1>reusable code</h1>
-              <p>The clean code allows you to easily copy code
-                 blocks from content</br>
-                 modules and past them in different places or layouts.</p>
-              <img src='img/image-3.jpg'>
-              <a class='button-slide-3' href='#'>Get Started Now</a>    
-            </div>
-              <input type='radio' name='slider' id='slider_4'>
-              <label for='slider_4'></label>
-            <div class='slider slider_text4'>
-              <h1>Just focus on</h1>
-              <h1>your creativity</h1>
-              <p>Take a break from messing around with heavy
-                 coding and spend your</br>
-                 time brainstorming ideas for your next project.</p>
-              <img src='img/image-4.jpg'>
-              <a class='button-slide-4' href='#'>Get Started Now</a>    
-            </div>
-              <input type='radio' name='slider' id='slider_5'>
-              <label for='slider_5'></label>
-            <div class='slider slider_text5'>
-              <h1>Showcase</br> your content</h1>
-              <p>With REEN you have the possibility to create 
-                websites for various contents</br>
-                quickly and easily. Now it's up to you!</p>
-              <img src='img/image-5.jpg'>
-              <a class='button-slide-5' href='#'>Get Started Now</a>    
-            </div>-->   
-       </div>
-      </div>
+    </div>
       <section>
         <div class='container'>
           <ul class='features-list'>
