finish slider & pagination

--- a/src/styles/slider.less
+++ b/src/styles/slider.less
@@ -77,7 +77,33 @@
      }
   }
 }
-
+.icon-next {
+  width: 100%;
+  position: absolute;
+  top:410px;
+  ul {
+    display: flex;
+    justify-content: space-between;
+    .icon-left {
+      width: 60px;
+      height: 60px;
+      background: rgba(80, 106, 133, 0.75);
+      background-image: url("../img/icon-left-open-mini.png");
+      background-repeat: no-repeat;
+      background-position: 20px 15px;
+      opacity: 0.5;
+    }
+    .icon-right {
+      width: 60px;
+      height: 60px;
+      background: rgba(80, 106, 133, 0.75);
+      background-image: url("../img/icon-right-open-mini.png");
+      background-repeat: no-repeat;
+      background-position: 20px 15px;
+      opacity: 0.5;
+    }
+  }
+}
 
 
 
