--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -110,6 +110,12 @@
          <li></li>
         </ul>
       </div>
+      <div class="icon-next">
+        <ul >
+          <li class="icon-left"></li>
+          <li class="icon-right"></li>
+        </ul>
+      </div>
     </div>
       <section>
         <div class='container'>
