--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -119,16 +119,16 @@
     </div>
       <section>
         <div class='container'>
-          <ul class='features-list'>
-            <li class='features-item'>
+          <div class="features">
               <h1>Beautiful. Clean. Responsive.</h1>
               <p>REEN is a high-quality solution for those
                  who want a beautiful website in no time. 
                  It's fully responsive and will adapt itself to any mobile device.
                   iPad, iPhone, Android,
                  it doesn't matter. Your content will always looks its absolute best.</p>
-           </li>      
-           <li class='features-item'>
+          </div>
+          <ul class='features-list'>
+            <li class='features-item features-item-1'>
               <h1>Passion</h1>
               <p>Magnis modipsae que lib voloratati
                  andigen daepeditem quiate re porem
@@ -136,7 +136,7 @@
                  non restibusaes maio es dem tumquam
                  core posae volor remped modis volor.</p>
            </li>
-           <li class='features-item'>
+           <li class='features-item features-item-2'>
               <h1>Creativity</h1>
               <p>Magnis modipsae que lib voloratati
                 andigen daepeditem quiate re porem
@@ -144,7 +144,7 @@
                 non restibusaes maio es dem tumquam
                 core posae volor remped modis volor.</p>
            </li>
-           <li class='features-item'>
+           <li class='features-item features-item-3'>
               <h1>Quality</h1>
               <p>Magnis modipsae que lib voloratati
                  andigen daepeditem quiate re porem
