--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -80,72 +80,7 @@ h1 {
   align-items: center;
 }
 
-/*who we are*/
-.features-list {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: flex-end;
-  font-size: 26px;
-  line-height: 34px;
-  flex-wrap: wrap;
-  margin-bottom: 126px;
-}
-.features-item {
-  width: 270px;
-  margin-right: 135px;
-  position: relative;
-  font-size: 16px;
-  line-height: 25px;
-}
-.features-item h1 {
-  margin-bottom: 30px;
-}
-.features-item:nth-child(1) {
-  width: 800px;
-  text-align: center;
-  font-size: 22px;
-  line-height: 34px;
-  margin:0 auto;
-  margin-bottom: 50px;
-  margin-top: 130px;
-}
-.features-item:nth-child(4) {
-  margin-right: 0;
-}
-.features-item:nth-of-type(2)::before {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: -90px;
-  width: 60px;
-  height: 53px;
-  background-image: url("../img/icon-heart.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}
-.features-item:nth-of-type(3)::before {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: -80px;
-  width: 45px;
-  height: 65px;
-  background-image: url("../img/icon-lamp.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}
-.features-item:nth-child(4)::before {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: -90px;
-  width: 56px;
-  height: 53px;
-  background-image: url("../img/icon-star.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}
+
 /*figure*/
 .portfolio {
   padding-top: 126px;
@@ -348,5 +283,7 @@ a.button-link {
   align-items: center;
 }
 @import "slider.less";
+@import "features-list.less";
+
 
 
