--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
     <header class='header'>
       <div class='contact-links'>
         <div class='container'>
-          <div class='wrapper-flex'>
+          <div class='wrapper-flex wrapper-flex-header'>
            <ul class='contact-info'>
              <li>
                <a href='#'>
@@ -158,11 +158,9 @@
        <section>
          <div class='portfolio'>
            <div class='container'>
-             <div class='portfolio-item'>
-               <h1>Check out our latest works</h1>
-               <p>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
-             </div>
-             <div class='portfolio-item-big'>
+             <h1>Check out our latest works</h1>
+             <p>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
+            <div class='wrapper-flex'>
               <figure>
                <img src='img/image_granthotel.jpg' width='570px' height='390px'
                alt='Grand Motel gets an identity brushup'>
@@ -172,7 +170,7 @@
                </figcaption>
               </figure>
               <figure>
-               <img src='img/image_figure2.jpg'
+               <img src='img/image_figure2.jpg' width='570px' height='390px'
                alt='Fresh branding for a creative startup'>
                <figcaption>
                 <h1>Fresh branding for a creative startup</h1>
@@ -180,14 +178,19 @@
                </figcaption>
               </figure>
              </div>
-             <div>
-               <ul class='porfolio-item-small'>
+             <ul class='wrapper-flex wrapper-flex-portfolio-small'>
                  <li><img src='img/image-item-1.jpg' width='270px' height='187px'></li>
                  <li><img src='img/image-item-2.jpg' width='270px' height='187px'></li>
                  <li><img src='img/image-item-3.jpg' width='270px' height='187px'></li>
                  <li><img src='img/image-item-4.jpg' width='270px' height='187px'></li> 
-               </ul>  
-             </div>  
+             </ul> 
+             <div class="portfolio-pagination">
+              <ul>
+               <li></li>
+               <li></li>
+               <li></li>
+              </ul>
+            </div>
            </div> 
          </div>
        </section>
