--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -86,6 +86,7 @@
         </div>
       </div>
     </header>
+
     <main>
       <div class='slider'>
         <ul>
@@ -102,21 +103,20 @@
           </li>
         </ul>
         <div class="pagination">
-        <ul>
-         <li></li>
-         <li></li>
-         <li></li>
-         <li></li>
-         <li></li>
+          <ul>
+            <li class="active"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>        
+        <ul class="icon-next">
+          <li class="arrow icon-left"></li>
+          <li class="arrow icon-right"></li>
         </ul>
       </div>
-      <div class="icon-next">
-        <ul >
-          <li class="icon-left"></li>
-          <li class="icon-right"></li>
-        </ul>
-      </div>
-    </div>
+
       <section>
         <div class='container'>
           <div class="features">
@@ -135,48 +135,49 @@
                  aut labor. Laceaque quiae sitiorem rest
                  non restibusaes maio es dem tumquam
                  core posae volor remped modis volor.</p>
-           </li>
-           <li class='features-item features-item-2'>
+            </li>
+            <li class='features-item features-item-2'>
               <h1>Creativity</h1>
               <p>Magnis modipsae que lib voloratati
                 andigen daepeditem quiate re porem
                 aut labor. Laceaque quiae sitiorem rest
                 non restibusaes maio es dem tumquam
                 core posae volor remped modis volor.</p>
-           </li>
-           <li class='features-item features-item-3'>
+            </li>
+            <li class='features-item features-item-3'>
               <h1>Quality</h1>
               <p>Magnis modipsae que lib voloratati
                  andigen daepeditem quiate re porem
                  aut labor. Laceaque quiae sitiorem rest
                  non restibusaes maio es dem tumquam
                  core posae volor remped modis volor.</p>
-           </li>
-         </ul>   
+            </li>
+          </ul>   
         </div>                   
        </section>
+
        <section>
          <div class='portfolio'>
            <div class='container'>
              <h1>Check out our latest works</h1>
              <p>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
-            <div class='wrapper-flex'>
-              <figure>
-               <img src='img/image_granthotel.jpg' width='570px' height='390px'
-               alt='Grand Motel gets an identity brushup'>
+             <div class='wrapper-flex'>
+               <figure>
+                 <img src='img/image_granthotel.jpg' width='570px' height='390px'
+                 alt='Grand Motel gets an identity brushup'>
                <figcaption>
-                <h1>Grand Motel gets an identity brushup</h1>
-                <p>Identity</p>
+                 <h1>Grand Motel gets an identity brushup</h1>
+                 <p>Identity</p>
                </figcaption>
-              </figure>
-              <figure>
-               <img src='img/image_figure2.jpg' width='570px' height='390px'
-               alt='Fresh branding for a creative startup'>
+               </figure>
+               <figure>
+                 <img src='img/image_figure2.jpg' width='570px' height='390px'
+                 alt='Fresh branding for a creative startup'>
                <figcaption>
-                <h1>Fresh branding for a creative startup</h1>
-                <p>Identity</p>
+                 <h1>Fresh branding for a creative startup</h1>
+                 <p>Identity</p>
                </figcaption>
-              </figure>
+               </figure>
              </div>
              <ul class='wrapper-flex wrapper-flex-portfolio-small'>
                  <li><img src='img/image-item-1.jpg' width='270px' height='187px'></li>
@@ -185,15 +186,16 @@
                  <li><img src='img/image-item-4.jpg' width='270px' height='187px'></li> 
              </ul> 
              <div class="portfolio-pagination">
-              <ul>
-               <li></li>
-               <li></li>
-               <li></li>
-              </ul>
-            </div>
+               <ul>
+                 <li></li>
+                 <li></li>
+                 <li></li>
+               </ul>
+             </div>
            </div> 
          </div>
        </section>
+       
        <section class='cooperation'>
          <div class='container'>
            <div class='cooperation-block'>
@@ -202,11 +204,12 @@
                  daepeditem quiate re porem aut labor. 
                  Laceaque quiae sitiorem rest non restibusaes
                   maio es dem tumquam.</p>
-            <a class='button-link' href='#'>Get in touch</a>
+              <a class='button-link' href='#'>Get in touch</a>
            </div>        
          </div>
        </section>
       </main>
+
       <footer class='footer'>
         <div class='container'>
           <div class='footer-info'>
