--- a/src/styles/slider.less
+++ b/src/styles/slider.less
@@ -2,108 +2,95 @@
 .slider {
   position: relative;
   width: 100%;
-   img {
+  img {
     width: 100%;
     min-height: 886px;   
     background-color: #a3b1bf; 
-    }
-}
-.slider-content {  
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  top: 280px;
-  left: 0;
-  
-  h1 {
-    font-size: 78px;
-    line-height: 88px;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: #fff;
-    padding-bottom: 10px;
   }
-  p {
-    font-size: 24px;
-    line-height: 33px;
-    letter-spacing: 0.02em;
-    font-weight: normal;
-    color: #a3b1bf;
-    padding-bottom: 60px;
-  }
-  a {
-    font-size: 18px;
-    letter-spacing: 0.025em;
-    color: #ffffff;
-    background: #00bc9c;
-    text-transform: uppercase;
-    text-decoration: none;
-    border-radius: 3px;
-    box-shadow: 0 -2px rgba(0,0,0,0.15) inset;
-    padding: 23px 70px;
+  .slider-content { 
+    position: absolute; 
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 100%;
     text-align: center;
-    font-weight: normal;
+    h1 {
+      padding-bottom: 10px;
+      font-size: 78px;
+      line-height: 88px;
+      letter-spacing: .06em;
+      text-transform: uppercase;
+      color: #fff;      
+    }
+    p {
+      padding-bottom: 60px;
+      font-size: 24px;
+      line-height: 33px;
+      letter-spacing: .02em;
+      font-weight: normal;
+      color: #a3b1bf;      
+    }
+    a {
+      padding: 23px 70px;
+      font-size: 18px;
+      font-weight: normal;
+      letter-spacing: .025em;
+      text-align: center;
+      text-transform: uppercase;
+      text-decoration: none;
+      border-radius: 3px;
+      color: #fff;
+      background: #00bc9c;
+      box-shadow: 0 -2px rgba(0,0,0,.15) inset;      
+    }
   }
-}
-.pagination {
-  width: 100%;
-  position: absolute;
-  bottom:-18px;
-  
-  ul {
-    margin-left: auto;
-    margin-right: auto;
-    width: 145px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: #fff; 
-    border-radius: 3px;
-       
-     li {
-       width: 15px;
-       height: 15px;
-       border-radius: 50%;
-       background: #506a85;
-  
-       &:last-child {
-         margin-right: 5px;
-       }
-       &:first-child {
-         background-color: #00bc9c;
-         margin-left: 5px;
-       }
-     }
+  .pagination {
+    position: absolute;
+    bottom: -18px;
+    width: 100%;
+    ul {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      width: 145px;
+      height: 45px;
+      margin: 0 auto;
+      padding: 0 5px;
+      border-radius: 3px;
+      background-color: #fff; 
+      li {
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+        background: #506a85;
+        &.active {
+          background-color: #00bc9c;
+        }
+      }
+    }
   }
-}
-.icon-next {
-  width: 100%;
-  position: absolute;
-  top:410px;
-  ul {
+  .icon-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
     display: flex;
     justify-content: space-between;
-    .icon-left {
+    width: 100%;
+    .arrow {
       width: 60px;
       height: 60px;
-      background: rgba(80, 106, 133, 0.75);
+      background: rgba(80, 106, 133,.75) no-repeat 20px 15px;
+      opacity: .5;
+    }
+    .icon-left {
       background-image: url("../img/icon-left-open-mini.png");
-      background-repeat: no-repeat;
-      background-position: 20px 15px;
-      opacity: 0.5;
     }
     .icon-right {
-      width: 60px;
-      height: 60px;
-      background: rgba(80, 106, 133, 0.75);
       background-image: url("../img/icon-right-open-mini.png");
-      background-repeat: no-repeat;
-      background-position: 20px 15px;
-      opacity: 0.5;
     }
   }
 }
+
 
 
 
