--- a/src/styles/features-list.less
+++ b/src/styles/features-list.less
@@ -1,44 +1,36 @@
 /*who we are*/
 .features {
-    width: 790px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 115px;
-    font-size: 22px;
-    line-height: 34px;
-    letter-spacing: 0.010em;
-    font-weight: 500;
-      h1 {
-        font-size: 44px;
-        line-height: 54px;
-        letter-spacing: 0.001;
-        margin-bottom: 20px;
-        font-weight: bold;
-      }
+  width: 100%;
+  max-width: 790px;
+  margin: 115px auto 0;
+  text-align: center;
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: .010em;
+  font-weight: 500;
+  h1 {
+    font-size: 44px;
+    line-height: 54px;
+    margin-bottom: 20px;
+    font-weight: bold;
+  }
 }
 .features-list {
-  width: 1170px;
-  margin: 0;
-  padding: 0;
   display: flex;
-  justify-content:space-around;
+  justify-content: space-around;
   flex-wrap: wrap;
-  margin-left: 60px;
+  width: 100%;
+  margin: 70px 0 126px 60px;
   font-size: 16px;
   line-height: 25px;
-  letter-spacing: 0.001em;
-  font-weight: 500;
-  margin-bottom: 126px;
-  margin-top: 70px;
+  font-weight: 500;  
   .features-item {
-    width: 270px;
     position: relative;
+    width: 270px;    
     h1 {
-        font-size: 26px;
-        line-height: 34px;
-        letter-spacing: 0.002em;
-        margin-bottom: 20px;
+      margin-bottom: 20px;
+      font-size: 26px;
+      line-height: 34px;
     }
     &::before {
       content: "";
