--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -25,7 +25,7 @@ h1 {
   width: 1170px;
   margin: 0 auto;
   padding: 0;
-  /*border: 1px solid green;*/
+  border: 1px solid green;
 }
 .header {
   background-color: #fff;
